[package]
name = "digital-garden"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
assert_fs = "1.0.6"
color-eyre = "0.5.11"
directories = "4.0.1"
edit = "0.1.3"
predicates = "2.0.3"
rprompt = "1.0.5"
slug = "0.1.4"
structopt = "0.3.25"

[dev-dependencies]
assert_cmd = "2.0.2"
